--- a/desafio03/public/index.html
+++ b/desafio03/public/index.html
@@ -12,6 +12,7 @@
             rel="stylesheet"
             href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css"
         />
+        <link rel="stylesheet" href="./style.css" />
         <title>Desafio 03</title>
     </head>
     <body>
